--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
 *{
     box-sizing: border-box;
 }
-
 body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #282a36;
 }
-
 main{
     padding: 30px;
     overflow: auto;
 }
-
 .bg-primary{
     background-color: #171a26;
 }
-
 .bg-second{
     background-color: #862525;
 }
-
 .nav-container{
     margin:0;
     padding: 10px;
 }
-
 h2, h3 {
     color: #ac3131;
 }
-
 .brand {
     padding: 10px;
     float: left;
 }
-
 .brand a{
     font-size: 1.8rem;
     color: white;
@@ -45,19 +36,15 @@ h2, h3 {
     text-decoration: none;
     padding-left: 30px;
 }
-
-
 ul.top-nav{
     list-style: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
-
 ul.top-nav li {
     float: left;
 }
-
 ul.top-nav li a {
     margin-right: 20px;
     display: inline-block;
@@ -68,56 +55,57 @@ ul.top-nav li a {
     padding: 16px 10px;
     font-weight: bold;
 }
-
 ul.top-nav li a:hover{
     color: #ac3131;
 }
-
-ul.top-nav li.icon {display: none;}
-
-.profile{
+ul.top-nav li.icon {
+    display: none;
+}
+.profile h2,.profile h3{
     text-align: center;
 }
-
 section table{
     margin-inline: auto;
     text-align: left!important;
 }
-
 section table tr td{
     padding: 5px;
 }
-
 .futured-image{
     width: 100%;
     max-height: 300px;
     object-fit: cover;
     object-position: center;
 }
-
+article p {
+    text-align: justify;
+}
+article h2,article h3{
+    text-align: left;
+}
+.sub-image{
+    width: min(100%, 400px);
+    margin: auto;
+}
 .profile img{
     width: min(100%, 250px);
     border-radius: 50%;
 }
-
 .card{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 20px;
     margin-top: 20px;
     border: 1px solid #171a26;
-    /* background-color: #171a26; */
     color: white;
+    text-align: center;
 }
-
 article.card{
     border-radius: 2%;
 }
-
 .banner-text{
     padding: 50px;
     line-height: 1.5;
 }
-
 .slide{
     object-fit: cover;
     object-position: center;
@@ -127,11 +115,9 @@ article.card{
     animation-duration: 1.5s;
     display: none;
 }
-
 .slider-wrapper{
     position: relative;
 }
-
 .slider-navigation{
     position: absolute;
     top: 50%;
@@ -141,7 +127,6 @@ article.card{
     justify-content: space-between;
     width: 100%;
 }
-
 .slider-navigation .prev, .slider-navigation .next{
     font-size: 24px;
     background-color: rgba(0, 0, 0, 0.4);
@@ -151,42 +136,37 @@ article.card{
     color: white;
     transition: 0.5s ease;
 }
-
 .slider-navigation .prev:hover, .slider-navigation .next:hover{
     background-color: rgba(255, 255, 255, 0.4);
     color: #1c1c1c;
 }
-
 .d-flex{
     display: flex;
     overflow: hidden;
     width: 100%;
 }
-
 .box{
     flex-basis: 35%;
 }
-
 .double{
     flex-basis: 65%;
 }
-
 #content{
     float: left;
     width: 75%;
 }
-
 aside{
     float: right;
     width: 25%;
     padding-left: 20px;
 }
-
 .jumbotron{
     padding: 0;
 }
-
-
+.github-link a{
+    text-decoration: none;
+    color: white;
+}
 footer {
     padding: 20px;
     color: white;
@@ -194,14 +174,10 @@ footer {
     text-align: center;
     font-weight: bold;
 }
-
-
-
 @keyframes fade{
     from{opacity: 0.2;}
     to{opacity: 1;}
 }
-
 @media screen and (max-width: 1039px){
     #content,
     aside{
@@ -217,32 +193,30 @@ footer {
     .d-flex{
         display: block;
     }
-
     .card{
         width: min(100% - 3rem, 900px);
         margin-inline: auto;
     }
-
     footer{
         margin-top: 20px;
     }
-
     .biodata{
         display: flex;
     }
-
     .biodata figure{
         flex-basis: 50%;
     }
     .biodata section{
         flex-basis: 50%;
     }
-
 }
-
 @media screen and (max-width:680px) {
-    ul.top-nav{position: relative;}
-    ul.top-nav li {display: none;}
+    ul.top-nav{
+        position: relative;
+    }
+    ul.top-nav li {
+        display: none;
+    }
     ul.top-nav li.icon {
       float: right;
       display: inline-block;
@@ -250,11 +224,9 @@ footer {
       right: 0;
       top: 0;
     }
-
     .brand{
         float: none;
     }
-
     ul.top-nav.responsive li {
       float: none;
       display: inline;
@@ -263,11 +235,13 @@ footer {
       display: block;
       text-align: center;
     }
-    
     main{
         padding: 0;
     }
     .biodata{
         display: block;
+    }
+    article p{
+        text-align: left;
     }
   }
